samples/_failures_safe/1761041868_8c0985_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cd497cf8.c: In function ‘main’:
./samples/SAFE/__tmp_cd497cf8.c:140:9: error: expected declaration or statement at end of input
  140 |         printf("Invalid input\n");
      |         ^~~~~~
./samples/SAFE/__tmp_cd497cf8.c:140:9: error: expected declaration or statement at end of input
